@@ -1,6 +1,7 @@
 0.40:
  * Added caption support.
  * Fixed directory deletion short circuiting processing the rest of a commit.
+ * Fixed issue loading non-ascii user image filenames on windows.
  * Fix to boost macros for Macs and non-GNU systems (mistydemeo).
  * Autotools improvements (flameeyes).
 
